<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/txt_connection"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_pass"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="2dp"
            android:text="@string/txt_Login"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textPersonName" >
            
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edit_login"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_pass"
            android:layout_alignBottom="@+id/edit_pass"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginRight="2dp"
            android:text="@string/txt_password"
            android:textSize="17sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="2dp"
            android:layout_marginTop="29dp"
            android:text="@string/txt_servAddr"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edit_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_addr"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_sertPort"
            android:textSize="17sp" />

        <ProgressBar
            android:id="@+id/prgrs_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_port"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="52dp"
            android:layout_toRightOf="@+id/btn_connect"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/prgrs_connect"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_connect" />

    </RelativeLayout>

</LinearLayout>